# Tasks

./: .gitignore  README.md
HttpRequestsChecking/: functionality.py  input.txt  main.py  output.txt  pyproject.toml  pyvenv.cfg  requirements.txt  timing
HttpRequestsChecking/htmlcov/: index.html
HttpRequestsChecking/tests/: input_for_test.txt  input_for_test2.txt  test_functionality.py  test_main.py
StationsControl/StationControl/: .coverage  Dockerfile  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
StationsControl/StationControl/StationControl/: asgi.py  settings.py  urls.py  wsgi.py
StationsControl/StationControl/StationControlApp/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
StationsControl/StationControl/StationControlApp/migrations/: 0001_initial.py  0002_alter_station_time_broken_alter_station_x_position_and_more.py  0003_alter_station_time_broken_indication.py  0004_alter_station_time_broken.py
StationsControl/StationControl/StationControlApp/static/StationControlApp/css/: styles.css
StationsControl/StationControl/StationControlApp/templates/StationControlApp/: base.html  create_indication.html  create_station.html  delete_station.html  index.html  login.html  register.html  state.html  station.html  update_station.html
StationsControl/StationControl/StationControlApp/tests/: tests.py
