[tool.poetry]
name = "httprequestschecking"
version = "1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "no"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
